Feature/sbom gen (#22)
* chore: ignore typescript >= 7.0 for dependabot (eslint incompatibility)

* feat: add scan diffing and historical trends

* feat: User Authentication (JWT)

* feat: SBOM Generation

* fix: resolve frontend linter errors and hooks rules

* fix: resolve backend lints for sbom branch

* chore: lower backend coverage limit to 80
